--- a/index.html
+++ b/index.html
@@ -1,12 +1,243 @@
 <html>
 <head>
+<meta charset = "uft-8"></meta>
 <style> 
-
+body, html{
+	height: 100%;
+	margin: 0;
+	padding: 0;
+}
+#fon{
+	position: absolute;
+	height: 100%;
+	width: 100%;
+}
+#one{
+	position: absolute;
+	top: 0.1%;
+	left: 0.1%;
+	height: 14.9%;
+	width: 99.9%;
+	background-color: #FFFF00;
+	overflow: hidden;
+}
+#minions{
+	position: absolute;
+	font-size: 70px;
+	margin-top: 1px;
+	margin-left: 1px;
+	font-family: Verdana;
+}
+#information{
+	position: absolute;
+	font-size: 25px;
+	right: 3px;
+	font-style: italic;
+}
+#two{
+	position: absolute;
+	bottom: 1%;
+	left: 1%;
+	height: 83%;
+	width: 25%;
+	background: rgba(0, 0, 0, 0.1); 
+}
+#minion{
+	position: absolute;
+	bottom: 1%;
+	left: 42%;
+}
+#miniontwo{
+	position: absolute;
+	bottom: 1%;
+	right: 42%;
+}
+#tgk{
+	position: absolute;
+	top: 3%;
+	left: 3%;
+}
+#vk{
+	position: absolute;
+	top: 13%;
+	left: 3%;
+}
+#sait{
+	position: absolute;
+	top: 23%;
+	left: 3%;
+}
+#golos{
+	position: absolute;
+	bottom: 45%;
+	left: 1%;
+	font-size: 35px;
+	font-weight: bold;
+}
+#three{
+	position: absolute;
+	bottom: 1%;
+	left: 27%;
+	height: 83%;
+	width: 46%;
+}
+#four{
+	position: absolute;
+	bottom: 1%;
+	right: 1%;
+	height: 83%;
+	width: 25%;
+	background: rgba(0, 0, 0, 0.1); 
+}
+#opros{
+	position: absolute;
+	top: 3%;
+	left: 3%;
+	font-size: 20px;
+}
+#spisok{
+	position: absolute;
+	top: 10%;
+	left: 3%;
+	font-size: 20px;
+}
+#roli{
+	position: absolute;
+	top: 325px;
+	width: 100%;
+	height: 920px;
+	background: rgba(0, 0, 0, 0.1); 
+}
+#man{
+	position: absolute;
+	top: 20px;
+	left: 0px;
+}
+#power{
+	position: absolute;
+	top: 240px;
+	left: 0px;
+}
+#mentor{
+	position: absolute;
+	top: 460px;
+	left: 0px;
+}
+#smm{
+	position: absolute;
+	top: 680px;
+	left: 0px;
+}
+#rolitext{
+	position: absolute;
+	left: 1px;
+}
+#textroli{
+	position: absolute;
+	top: 0px;
+	right: 1px;
+	width: 65%;
+}
+#rolic{
+	position: absolute;
+	top: 1%;
+	width: 100%;
+	height: 300px;
+	background: rgba(0, 0, 0, 0.1); 
+}
+#video{
+	position: absolute;
+	top: 9%;
+	left: 1%;
+}
+#rolictext{
+	position: absolute;
+	top: 1%;
+	right: 1%;
+}
+#textrolic{
+	position: absolute;
+	top: 2%;
+	right: 2%;
+	width: 30%;
+}
+#vidos{
+	position: absolute;
+	bottom: 5%;
+	left: 20%;
+}
 </style>
 </head>
 <body>
-<button>123</button>
-<a href = "big.jpg"><img href = "big.jpg" src = "small.jpg"></a>
+<div id = "fon">
+	<div id = "one">
+		<p id = "minions">МИНЬОНЫ!!!</p>
+		<p id = "information">Здесь вы можете узнать всю актуальную информацию о нашей партии!</p>
+	</div>
+	<div id = "two">
+		<a href = "https://t.me/school_123omsk" id = "tgk">ТГК гимназии: https://t.me/school_123omsk</a>
+		<a href = "https://vk.com/public216943837" id = "vk">ВК гимназии: https://vk.com/public216943837</a>
+		<a href = "http://ou123.omsk.obr55.ru" id = "sait">Сайт гимназии: http://ou123.omsk.obr55.ru</a>
+		<p id = "golos">#Голосуй_за_Сережу</p>
+		<img src = "minion.png" id = "minion"></img>
+		<img src = "miniontwo.png" id = "miniontwo"></img>
+	</div>
+	<div id = "three">
+		<div id = "rolic">
+			<img width = "400" height = "225" src = "duel.jpg" id = "video"></img>
+			<div id = "textrolic">
+				<p id = "rolictext">
+						«НЕ ГадкаЯ партия» представляет… <br>
+					<br>
+					Я - Сережа Карпушин, будущий директор-дублер гимназии. <br>
+					<br>
+					Я и моя команда миньонов хотим сделать «День самоуправления 2024» самым веселым и запоминающимся в истории гимназии! <br>
+				</p>
+			</div>
+			<a href = "https://t.me/school_123omsk/2155" id = "vidos">С видео вы можете ознакомиться по этой ссылке!</a>
+		</div>
+		<div id = "roli">
+			<a href = "bigman.jpg" id = "man"><img href = "bigman.jpg" src = "smallman.jpg"></a>
+			<a href = "bigpower.jpg" id = "power"><img href = "bigpower.jpg" src = "smallpower.jpg"></a>
+			<a href = "bigmentor.jpg" id = "mentor"><img href = "bigmentor.jpg" src = "smallmentor.jpg"></a>
+			<a href = "bigsmm.jpg" id = "smm"><img href = "bigsmm.jpg" src = "smallsmm.jpg"></a>
+			<div id = "textroli">
+				<p id = "rolitext">
+					Мы готовы представить нашу команду!<br>
+					<br>
+						Men представляют:<br>
+					Сережа Карпушин - директор 2024 - активный участник жизни гимназии, один из лучших баскетболистов гимназии, самый лучший диджей.<br>
+					Денис Никофоров - советник директора - кандидат в директора 2023.<br>
+					<br>
+						Power представляют:<br>
+					Анастасия Копалкина - заместитель директора - одна из лучших баскетболисток гимназии.<br>
+					Влада Юрьева - советник директора - участник общероссийского общественно-государственного движения «движение первых».<br>
+					Вика Широкова - заместитель директора по воспитательной работе - вожатая летнего профильного лагеря 2023 #твоёлето_в123.<br>
+					Мария Щавелюк - заместитель директора - профессиональный бальный танцор, имеет множество побед и наград.<br>
+					Ирина Седельникова - заместитель директора - участница команды «Дети экономистов» в Кейс-чемпионате по экономике и предпринимательству.<br>
+					<br>
+						Mentor представляют:<br>
+					Дарья Галай - тьютор - участница команды конкурса по защите прав потребителей «Дети роспотребнадзора».<br>
+					Яна Дьякова - старший вожатый - заслуженная спортсменка 123 гимназии.<br>
+					Злата Шурыгина - классный руководитель 12 класса - активный участник жизни гимназии, графический дизайнер команды.<br>
+					Анна Тумилович - психолог -  вожатая летнего профильного лагеря 2023 #твоёлето_в123.<br>
+					София Пантина - социальный педагог - самый солнечный участник нашей команды.<br>
+					<br>
+						Smm представляют:<br>
+					Виктория Садоха - креатив директор -  экс-участник команды КВН "Сияние" и "СеЛяВи".<br>
+					Ева Шепелева - технический специалист - участница команды по конкурса по защите прав потребителей «Дети роспотребнадзора».<br>
+					Рита Ковалева - пресс секретарь - профессиональный танцор разносторонних направлений со стажем более 11 летожет придумать танец на любое мероприятие.<br>
+					Катя Табакаева - видеооператор, режиссер-монтажер - участник команды поддержки ХК «Авангард» «CHERRY».
+
+				</p>
+			</div>
+		</div>
+	</div>
+	<div id = "four">
+		<a href = "https://docs.google.com/forms/d/e/1FAIpQLScw7J5CFsOc__BNFWLqKT1ST89isoy7oesUOSLQduYK05-3wQ/viewform?usp=sf_link" id = "opros">Вы можете пройти гугл-форму, чтобы увековечить себя на нашем сайте!</a>
+		<p id = "spisok">Список участвовавших:</p>
+	</div>
+</div>
 <script>
 
 </script>
