--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@ body, html{
 	height: 83%;
 	width: 25%;
 	background: rgba(0, 0, 0, 0.1); 
+	overflow: hidden;
 }
 #minion{
 	position: absolute;
@@ -80,6 +81,7 @@ body, html{
 	left: 27%;
 	height: 83%;
 	width: 46%;
+	overflow: hidden;
 }
 #four{
 	position: absolute;
@@ -88,6 +90,7 @@ body, html{
 	height: 83%;
 	width: 25%;
 	background: rgba(0, 0, 0, 0.1); 
+	overflow: hidden;
 }
 #opros{
 	position: absolute;
@@ -131,12 +134,14 @@ body, html{
 #rolitext{
 	position: absolute;
 	left: 1px;
+	word-break: break-all;
 }
 #textroli{
 	position: absolute;
 	top: 0px;
 	right: 1px;
 	width: 65%;
+	overflow: hidden;
 }
 #rolic{
 	position: absolute;
@@ -154,12 +159,14 @@ body, html{
 	position: absolute;
 	top: 1%;
 	right: 1%;
+	word-break: break-all;
 }
 #textrolic{
 	position: absolute;
 	top: 2%;
 	right: 2%;
 	width: 30%;
+	overflow: hidden;
 }
 #vidos{
 	position: absolute;
