--- a/index.html
+++ b/index.html
@@ -19,19 +19,19 @@ body, html{
 	height: 14.9%;
 	width: 99.9%;
 	background-color: #FFFF00;
-	overflow: hidden;
 }
 #minions{
 	position: absolute;
-	font-size: 70px;
+	font-size: 500%;
 	margin-top: 1px;
-	margin-left: 1px;
+	
 	font-family: Verdana;
 }
 #information{
 	position: absolute;
-	font-size: 25px;
-	right: 3px;
+	font-size: 150%;
+	bottom: 1px;
+	right: 1px;
 	font-style: italic;
 }
 #two{
@@ -41,7 +41,6 @@ body, html{
 	height: 83%;
 	width: 25%;
 	background: rgba(0, 0, 0, 0.1); 
-	overflow: hidden;
 }
 #minion{
 	position: absolute;
@@ -72,7 +71,7 @@ body, html{
 	position: absolute;
 	bottom: 45%;
 	left: 1%;
-	font-size: 35px;
+	font-size: 200%;
 	font-weight: bold;
 }
 #three{
@@ -81,7 +80,6 @@ body, html{
 	left: 27%;
 	height: 83%;
 	width: 46%;
-	overflow: hidden;
 }
 #four{
 	position: absolute;
@@ -90,7 +88,6 @@ body, html{
 	height: 83%;
 	width: 25%;
 	background: rgba(0, 0, 0, 0.1); 
-	overflow: hidden;
 }
 #opros{
 	position: absolute;
@@ -134,14 +131,12 @@ body, html{
 #rolitext{
 	position: absolute;
 	left: 1px;
-	word-break: break-all;
 }
 #textroli{
 	position: absolute;
 	top: 0px;
 	right: 1px;
 	width: 65%;
-	overflow: hidden;
 }
 #rolic{
 	position: absolute;
@@ -159,19 +154,17 @@ body, html{
 	position: absolute;
 	top: 1%;
 	right: 1%;
-	word-break: break-all;
 }
 #textrolic{
 	position: absolute;
 	top: 2%;
 	right: 2%;
 	width: 30%;
-	overflow: hidden;
 }
 #vidos{
 	position: absolute;
 	bottom: 5%;
-	left: 20%;
+	left: 25%;
 }
 </style>
 </head>
