--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ body, html{
 	bottom: 45%;
 	left: 1%;
 	font-size: 200%;
-	word-wrap: break-word;
+	
 	font-weight: bold;
 }
 #three{
@@ -179,7 +179,7 @@ body, html{
 		<a href = "https://t.me/school_123omsk" id = "tgk">ТГК гимназии: https://t.me/school_123omsk</a>
 		<a href = "https://vk.com/public216943837" id = "vk">ВК гимназии: https://vk.com/public216943837</a>
 		<a href = "http://ou123.omsk.obr55.ru" id = "sait">Сайт гимназии: http://ou123.omsk.obr55.ru</a>
-		<p id = "golos">#Голосуй_за_Сережу</p>
+		<p id = "golos">#Голосуй за Сережу</p>
 		<img src = "minion.png" id = "minion"></img>
 		<img src = "miniontwo.png" id = "miniontwo"></img>
 	</div>
