--- a/index.html
+++ b/index.html
@@ -144,29 +144,36 @@ body, html{
 	position: absolute;
 	top: 1%;
 	width: 100%;
-	height: 300px;
+	height: 55%;
 	background: rgba(0, 0, 0, 0.1); 
 }
 #video{
 	position: absolute;
 	top: 9%;
 	left: 1%;
+	width: 65%;
+	height: 75%;
 }
 #rolictext{
 	position: absolute;
 	top: 1%;
 	right: 1%;
+	font-size: 100%;
 }
 #textrolic{
 	position: absolute;
-	top: 2%;
-	right: 2%;
+	top: 1%;
+	right: 1%;
 	width: 30%;
 }
 #vidos{
 	position: absolute;
 	bottom: 5%;
 	left: 25%;
+	font-size: 100%;
+}
+#mentorimg{
+	height: 100%;
 }
 </style>
 </head>
@@ -186,7 +193,7 @@ body, html{
 	</div>
 	<div id = "three">
 		<div id = "rolic">
-			<img width = "400" height = "225" src = "duel.jpg" id = "video"></img>
+			<img src = "duel.jpg" id = "video"></img>
 			<div id = "textrolic">
 				<p id = "rolictext">
 						«НЕ ГадкаЯ партия» представляет… <br>
@@ -201,7 +208,7 @@ body, html{
 		<div id = "roli">
 			<a href = "bigman.jpg" id = "man"><img href = "bigman.jpg" src = "smallman.jpg"></a>
 			<a href = "bigpower.jpg" id = "power"><img href = "bigpower.jpg" src = "smallpower.jpg"></a>
-			<a href = "bigmentor.jpg" id = "mentor"><img href = "bigmentor.jpg" src = "smallmentor.jpg"></a>
+			<a href = "bigmentor.jpg" id = "mentor"><img href = "bigmentor.jpg" src = "smallmentor.jpg" id = "mentorimg"></a>
 			<a href = "bigsmm.jpg" id = "smm"><img href = "bigsmm.jpg" src = "smallsmm.jpg"></a>
 			<div id = "textroli">
 				<p id = "rolitext">
