--- a/index.html
+++ b/index.html
@@ -144,15 +144,15 @@ body, html{
 	position: absolute;
 	top: 1%;
 	width: 100%;
-	height: 55%;
+	height: 300px;
 	background: rgba(0, 0, 0, 0.1); 
 }
 #video{
 	position: absolute;
 	top: 9%;
 	left: 1%;
-	width: 65%;
-	height: 75%;
+	width: 400px;
+	height: 225px;
 }
 #rolictext{
 	position: absolute;
