--- a/index.html
+++ b/index.html
@@ -23,15 +23,14 @@ body, html{
 #minions{
 	position: absolute;
 	font-size: 500%;
-	margin-top: 1px;
-	
+	margin-top: 0%;
 	font-family: Verdana;
 }
 #information{
 	position: absolute;
 	font-size: 150%;
-	bottom: 1px;
-	right: 1px;
+	bottom: 1%;
+	right: 1%;
 	font-style: italic;
 }
 #two{
@@ -151,8 +150,9 @@ body, html{
 	position: absolute;
 	top: 9%;
 	left: 1%;
-	width: 400px;
-	height: 225px;
+	max-width: 100%;
+	height: auto;
+	max-height:100%
 }
 #rolictext{
 	position: absolute;
