--- a/index.html
+++ b/index.html
@@ -150,9 +150,13 @@ body, html{
 	position: absolute;
 	top: 9%;
 	left: 1%;
-	max-width: 100%;
-	height: auto;
-	max-height:100%
+	width: 400px;
+	height: 225px;
+}
+.img-container img {
+    max-width: 100%;
+    height: auto;
+    max-height:100%
 }
 #rolictext{
 	position: absolute;
