--- a/index.html
+++ b/index.html
@@ -151,12 +151,8 @@ body, html{
 	top: 9%;
 	left: 1%;
 	width: 400px;
-	height: 225px;
-}
-.img-container img {
-    max-width: 100%;
-    height: auto;
-    max-height:100%
+    height: 225px;
+    background: url(duel.jpg) no-repeat center/cover;
 }
 #rolictext{
 	position: absolute;
@@ -197,7 +193,7 @@ body, html{
 	</div>
 	<div id = "three">
 		<div id = "rolic">
-			<img src = "duel.jpg" id = "video"></img>
+			<img id = "video"></img>
 			<div id = "textrolic">
 				<p id = "rolictext">
 						«НЕ ГадкаЯ партия» представляет… <br>
