--- a/index.html
+++ b/index.html
@@ -143,16 +143,15 @@ body, html{
 	position: absolute;
 	top: 1%;
 	width: 100%;
-	height: 300px;
+	height: 55%;
 	background: rgba(0, 0, 0, 0.1); 
 }
 #video{
 	position: absolute;
 	top: 9%;
 	left: 1%;
-	width: 400px;
-    height: 225px;
-    background: url(duel.jpg) no-repeat center/cover;
+	max-width:100%;
+	height:auto;
 }
 #rolictext{
 	position: absolute;
@@ -193,7 +192,7 @@ body, html{
 	</div>
 	<div id = "three">
 		<div id = "rolic">
-			<img id = "video"></img>
+			<img id = "video" src = "duel.jpg"></img>
 			<div id = "textrolic">
 				<p id = "rolictext">
 						«НЕ ГадкаЯ партия» представляет… <br>
