--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ body, html{
 }
 #roli{
 	position: absolute;
-	top: 325px;
+	top: 60%;
 	width: 100%;
 	height: 920px;
 	background: rgba(0, 0, 0, 0.1); 
