--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@ body, html{
 #rolitext{
 	position: absolute;
 	left: 1px;
+	font-size: 100%;
 }
 #textroli{
 	position: absolute;
@@ -168,7 +169,8 @@ body, html{
 #vidos{
 	position: absolute;
 	bottom: 5%;
-	left: 25%;
+	margin-left: 20%;
+	margin-right: 20%;
 	font-size: 100%;
 }
 #mentorimg{
