--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ body, html{
 	position: absolute;
 	top: 60%;
 	width: 100%;
-	height: 920px;
+	height: 175%;
 	background: rgba(0, 0, 0, 0.1); 
 }
 #man{
@@ -142,7 +142,6 @@ body, html{
 }
 #rolic{
 	position: absolute;
-	top: 1%;
 	width: 100%;
 	height: 55%;
 	background: rgba(0, 0, 0, 0.1); 
