--- a/index.html
+++ b/index.html
@@ -72,7 +72,6 @@ body, html{
 	bottom: 45%;
 	left: 1%;
 	font-size: 200%;
-	
 	font-weight: bold;
 }
 #three{
@@ -104,9 +103,9 @@ body, html{
 }
 #roli{
 	position: absolute;
-	top: 60%;
+	top: 330px;
 	width: 100%;
-	height: 175%;
+	height: 920px;
 	background: rgba(0, 0, 0, 0.1); 
 }
 #man{
@@ -143,15 +142,15 @@ body, html{
 #rolic{
 	position: absolute;
 	width: 100%;
-	height: 55%;
+	height: 300px;
 	background: rgba(0, 0, 0, 0.1); 
 }
 #video{
 	position: absolute;
 	top: 3%;
 	left: 1%;
-	max-width:10%;
-	height:auto;
+	width: 400px;
+	height: 225px;
 }
 #rolictext{
 	position: absolute;
