--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ body, html{
 }
 #rolic{
 	position: absolute;
-	width: 100%;
+	width: 600px;
 	height: 300px;
 	background: rgba(0, 0, 0, 0.1); 
 }
