--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@ body, html{
 	position: absolute;
 	bottom: 1%;
 	left: 1%;
-	height: 83%;
-	width: 25%;
+	height: 534px;
+	width: 334px;
 	background: rgba(0, 0, 0, 0.1); 
 	overflow-x:hidden
 }
@@ -85,8 +85,8 @@ body, html{
 	position: absolute;
 	bottom: 1%;
 	right: 1%;
-	height: 83%;
-	width: 25%;
+	height: 534px;
+	width: 334px;
 	background: rgba(0, 0, 0, 0.1); 
 }
 #opros{
