--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ body, html{
 }
 #two{
 	position: absolute;
-	bottom: 1%;
+	top: 16%;
 	left: 1%;
 	height: 534px;
 	width: 334px;
@@ -76,15 +76,15 @@ body, html{
 }
 #three{
 	position: absolute;
-	bottom: 1%;
-	left: 27%;
+	top: 16%;
+	left: 364px;
 	height: 83%;
-	width: 46%;
+	width: 600px;
 }
 #four{
 	position: absolute;
-	bottom: 1%;
-	right: 1%;
+	top: 16%;
+	left: 984px;
 	height: 534px;
 	width: 334px;
 	background: rgba(0, 0, 0, 0.1); 
@@ -104,7 +104,7 @@ body, html{
 #roli{
 	position: absolute;
 	top: 330px;
-	width: 100%;
+	width: 600px;
 	height: 920px;
 	background: rgba(0, 0, 0, 0.1); 
 }
