--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@ body, html{
 }
 #one{
 	position: absolute;
-	top: 0.1%;
-	left: 0.1%;
-	height: 14.9%;
-	width: 99.9%;
+	top: 0.1px;
+	left: 0.1px;
+	height: 100px;
+	width: 1328px;
 	background-color: #FFFF00;
 }
 #minions{
@@ -35,8 +35,8 @@ body, html{
 }
 #two{
 	position: absolute;
-	top: 16%;
-	left: 1%;
+	top: 110px;
+	left: 10px;
 	height: 534px;
 	width: 334px;
 	background: rgba(0, 0, 0, 0.1); 
@@ -76,14 +76,14 @@ body, html{
 }
 #three{
 	position: absolute;
-	top: 16%;
+	top: 110px;
 	left: 364px;
 	height: 83%;
 	width: 600px;
 }
 #four{
 	position: absolute;
-	top: 16%;
+	top: 110px;
 	left: 984px;
 	height: 534px;
 	width: 334px;
