--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@ body, html{
 }
 #minions{
 	position: absolute;
-	font-size: 500%;
-	margin-top: 0%;
+	font-size: 70px;
+	margin-top: 3px;
 	font-family: Verdana;
 }
 #information{
 	position: absolute;
-	font-size: 150%;
-	bottom: 1%;
-	right: 1%;
+	font-size: 25px;
+	bottom: 3px;
+	right: 3px;
 	font-style: italic;
 }
 #two{
@@ -40,7 +40,6 @@ body, html{
 	height: 534px;
 	width: 334px;
 	background: rgba(0, 0, 0, 0.1); 
-	overflow-x:hidden
 }
 #minion{
 	position: absolute;
@@ -71,7 +70,7 @@ body, html{
 	position: absolute;
 	bottom: 45%;
 	left: 1%;
-	font-size: 200%;
+	font-size: 30px;
 	font-weight: bold;
 }
 #three{
@@ -186,7 +185,7 @@ body, html{
 		<a href = "https://t.me/school_123omsk" id = "tgk">ТГК гимназии: https://t.me/school_123omsk</a>
 		<a href = "https://vk.com/public216943837" id = "vk">ВК гимназии: https://vk.com/public216943837</a>
 		<a href = "http://ou123.omsk.obr55.ru" id = "sait">Сайт гимназии: http://ou123.omsk.obr55.ru</a>
-		<p id = "golos">#Голосуй за Сережу</p>
+		<p id = "golos">#Голосуй_за_Сережу</p>
 		<img src = "minion.png" id = "minion"></img>
 		<img src = "miniontwo.png" id = "miniontwo"></img>
 	</div>
