--- a/index.html
+++ b/index.html
@@ -7,11 +7,6 @@ body, html{
 	margin: 0;
 	padding: 0;
 }
-#fon{
-	position: absolute;
-	height: 100%;
-	width: 100%;
-}
 #one{
 	position: absolute;
 	top: 0.1px;
@@ -37,67 +32,69 @@ body, html{
 	position: absolute;
 	top: 110px;
 	left: 10px;
-	height: 534px;
+	height: 434px;
 	width: 334px;
 	background: rgba(0, 0, 0, 0.1); 
 }
 #minion{
 	position: absolute;
-	bottom: 1%;
+	bottom: 1px;
 	left: 42%;
 }
 #miniontwo{
 	position: absolute;
-	bottom: 1%;
+	bottom: 1px;
 	right: 42%;
 }
 #tgk{
 	position: absolute;
-	top: 3%;
-	left: 3%;
+	top: 10px;
+	left: 10px;
+	font-size: 16px;
 }
 #vk{
 	position: absolute;
-	top: 13%;
-	left: 3%;
+	top: 50px;
+	left: 10px;
+	font-size: 16px;
 }
 #sait{
 	position: absolute;
-	top: 23%;
-	left: 3%;
+	top: 90px;
+	left: 10px;
+	font-size: 16px;
 }
 #golos{
 	position: absolute;
-	bottom: 45%;
-	left: 1%;
-	font-size: 30px;
+	top: 100px;
+	left: 3px;
+	font-size: 33px;
 	font-weight: bold;
 }
 #three{
 	position: absolute;
 	top: 110px;
 	left: 364px;
-	height: 83%;
 	width: 600px;
 }
 #four{
 	position: absolute;
 	top: 110px;
 	left: 984px;
-	height: 534px;
+	height: 434px;
 	width: 334px;
 	background: rgba(0, 0, 0, 0.1); 
 }
 #opros{
 	position: absolute;
-	top: 3%;
-	left: 3%;
+	top: 10px;
+	left: 10px;
 	font-size: 20px;
 }
 #spisok{
 	position: absolute;
-	top: 10%;
-	left: 3%;
+	top: 40px;
+	left: 10px;
 	font-size: 20px;
 }
 #roli{
@@ -176,77 +173,73 @@ body, html{
 </style>
 </head>
 <body>
-<div id = "fon">
-	<div id = "one">
-		<p id = "minions">МИНЬОНЫ!!!</p>
-		<p id = "information">Здесь вы можете узнать всю актуальную информацию о нашей партии!</p>
-	</div>
-	<div id = "two">
-		<a href = "https://t.me/school_123omsk" id = "tgk">ТГК гимназии: https://t.me/school_123omsk</a>
-		<a href = "https://vk.com/public216943837" id = "vk">ВК гимназии: https://vk.com/public216943837</a>
-		<a href = "http://ou123.omsk.obr55.ru" id = "sait">Сайт гимназии: http://ou123.omsk.obr55.ru</a>
-		<p id = "golos">#Голосуй_за_Сережу</p>
-		<img src = "minion.png" id = "minion"></img>
-		<img src = "miniontwo.png" id = "miniontwo"></img>
-	</div>
-	<div id = "three">
-		<div id = "rolic">
-			<img id = "video" src = "duel.jpg"></img>
-			<div id = "textrolic">
-				<p id = "rolictext">
-						«НЕ ГадкаЯ партия» представляет… <br>
-					<br>
-					Я - Сережа Карпушин, будущий директор-дублер гимназии. <br>
-					<br>
-					Я и моя команда миньонов хотим сделать «День самоуправления 2024» самым веселым и запоминающимся в истории гимназии! <br>
-				</p>
-			</div>
-			<a href = "https://t.me/school_123omsk/2155" id = "vidos">С видео вы можете ознакомиться по этой ссылке!</a>
+<div id = "one">
+	<p id = "minions">МИНЬОНЫ!!!</p>
+	<p id = "information">Здесь вы можете узнать всю актуальную информацию о нашей партии!</p>
+</div>
+<div id = "two">
+	<a href = "https://t.me/school_123omsk" id = "tgk">ТГК гимназии: https://t.me/school_123omsk</a>
+	<a href = "https://vk.com/public216943837" id = "vk">ВК гимназии: https://vk.com/public216943837</a>
+	<a href = "http://ou123.omsk.obr55.ru" id = "sait">Сайт гимназии: http://ou123.omsk.obr55.ru</a>
+	<p id = "golos">#Голосуй_за_Сережу</p>
+	<img src = "minion.png" id = "minion"></img>
+	<img src = "miniontwo.png" id = "miniontwo"></img>
+</div>
+<div id = "three">
+	<div id = "rolic">
+		<img id = "video" src = "duel.jpg"></img>
+		<div id = "textrolic">
+			<p id = "rolictext">
+				«НЕ ГадкаЯ партия» представляет… <br>
+				<br>
+				Я - Сережа Карпушин, будущий директор-дублер гимназии. <br>
+				<br>
+				Я и моя команда миньонов хотим сделать «День самоуправления 2024» самым веселым и запоминающимся в истории гимназии! <br>
+			</p>
 		</div>
-		<div id = "roli">
-			<a href = "bigman.jpg" id = "man"><img href = "bigman.jpg" src = "smallman.jpg"></a>
-			<a href = "bigpower.jpg" id = "power"><img href = "bigpower.jpg" src = "smallpower.jpg"></a>
-			<a href = "bigmentor.jpg" id = "mentor"><img href = "bigmentor.jpg" src = "smallmentor.jpg" id = "mentorimg"></a>
-			<a href = "bigsmm.jpg" id = "smm"><img href = "bigsmm.jpg" src = "smallsmm.jpg"></a>
-			<div id = "textroli">
-				<p id = "rolitext">
+		<a href = "https://t.me/school_123omsk/2155" id = "vidos">С видео вы можете ознакомиться по этой ссылке!</a>
+	</div>
+	<div id = "roli">
+		<a href = "bigman.jpg" id = "man"><img href = "bigman.jpg" src = "smallman.jpg"></a>
+		<a href = "bigpower.jpg" id = "power"><img href = "bigpower.jpg" src = "smallpower.jpg"></a>
+		<a href = "bigmentor.jpg" id = "mentor"><img href = "bigmentor.jpg" src = "smallmentor.jpg" id = "mentorimg"></a>
+		<a href = "bigsmm.jpg" id = "smm"><img href = "bigsmm.jpg" src = "smallsmm.jpg"></a>
+		<div id = "textroli">
+			<p id = "rolitext">
 					Мы готовы представить нашу команду!<br>
-					<br>
-						Men представляют:<br>
-					Сережа Карпушин - директор 2024 - активный участник жизни гимназии, один из лучших баскетболистов гимназии, самый лучший диджей.<br>
-					Денис Никофоров - советник директора - кандидат в директора 2023.<br>
-					<br>
-						Power представляют:<br>
-					Анастасия Копалкина - заместитель директора - одна из лучших баскетболисток гимназии.<br>
-					Влада Юрьева - советник директора - участник общероссийского общественно-государственного движения «движение первых».<br>
-					Вика Широкова - заместитель директора по воспитательной работе - вожатая летнего профильного лагеря 2023 #твоёлето_в123.<br>
-					Мария Щавелюк - заместитель директора - профессиональный бальный танцор, имеет множество побед и наград.<br>
-					Ирина Седельникова - заместитель директора - участница команды «Дети экономистов» в Кейс-чемпионате по экономике и предпринимательству.<br>
-					<br>
-						Mentor представляют:<br>
-					Дарья Галай - тьютор - участница команды конкурса по защите прав потребителей «Дети роспотребнадзора».<br>
-					Яна Дьякова - старший вожатый - заслуженная спортсменка 123 гимназии.<br>
-					Злата Шурыгина - классный руководитель 12 класса - активный участник жизни гимназии, графический дизайнер команды.<br>
-					Анна Тумилович - психолог -  вожатая летнего профильного лагеря 2023 #твоёлето_в123.<br>
-					София Пантина - социальный педагог - самый солнечный участник нашей команды.<br>
-					<br>
-						Smm представляют:<br>
-					Виктория Садоха - креатив директор -  экс-участник команды КВН "Сияние" и "СеЛяВи".<br>
-					Ева Шепелева - технический специалист - участница команды по конкурса по защите прав потребителей «Дети роспотребнадзора».<br>
-					Рита Ковалева - пресс секретарь - профессиональный танцор разносторонних направлений со стажем более 11 летожет придумать танец на любое мероприятие.<br>
-					Катя Табакаева - видеооператор, режиссер-монтажер - участник команды поддержки ХК «Авангард» «CHERRY».
-
-				</p>
-			</div>
+				<br>
+					Men представляют:<br>
+				Сережа Карпушин - директор 2024 - активный участник жизни гимназии, один из лучших баскетболистов гимназии, самый лучший диджей.<br>
+				Денис Никофоров - советник директора - кандидат в директора 2023.<br>
+				<br>
+					Power представляют:<br>
+				Анастасия Копалкина - заместитель директора - одна из лучших баскетболисток гимназии.<br>
+				Влада Юрьева - советник директора - участник общероссийского общественно-государственного движения «движение первых».<br>
+				Вика Широкова - заместитель директора по воспитательной работе - вожатая летнего профильного лагеря 2023 #твоёлето_в123.<br>
+				Мария Щавелюк - заместитель директора - профессиональный бальный танцор, имеет множество побед и наград.<br>
+				Ирина Седельникова - заместитель директора - участница команды «Дети экономистов» в Кейс-чемпионате по экономике и предпринимательству.<br>
+				<br>
+					Mentor представляют:<br>
+				Дарья Галай - тьютор - участница команды конкурса по защите прав потребителей «Дети роспотребнадзора».<br>
+				Яна Дьякова - старший вожатый - заслуженная спортсменка 123 гимназии.<br>
+				Злата Шурыгина - классный руководитель 12 класса - активный участник жизни гимназии, графический дизайнер команды.<br>
+				Анна Тумилович - психолог -  вожатая летнего профильного лагеря 2023 #твоёлето_в123.<br>
+				София Пантина - социальный педагог - самый солнечный участник нашей команды.<br>
+				<br>
+					Smm представляют:<br>
+				Виктория Садоха - креатив директор -  экс-участник команды КВН "Сияние" и "СеЛяВи".<br>
+				Ева Шепелева - технический специалист - участница команды по конкурса по защите прав потребителей «Дети роспотребнадзора».<br>
+				Рита Ковалева - пресс секретарь - профессиональный танцор разносторонних направлений со стажем более 11 летожет придумать танец на любое мероприятие.<br>
+				Катя Табакаева - видеооператор, режиссер-монтажер - участник команды поддержки ХК «Авангард» «CHERRY».
+			</p>
 		</div>
-	</div>
-	<div id = "four">
-		<a href = "https://docs.google.com/forms/d/e/1FAIpQLScw7J5CFsOc__BNFWLqKT1ST89isoy7oesUOSLQduYK05-3wQ/viewform?usp=sf_link" id = "opros">Вы можете пройти гугл-форму, чтобы увековечить себя на нашем сайте!</a>
-		<p id = "spisok">Список участвовавших:</p>
 	</div>
 </div>
+<div id = "four">
+	<a href = "https://docs.google.com/forms/d/e/1FAIpQLScw7J5CFsOc__BNFWLqKT1ST89isoy7oesUOSLQduYK05-3wQ/viewform?usp=sf_link" id = "opros">Вы можете пройти гугл-форму, чтобы увековечить себя на нашем сайте!</a>
+	<p id = "spisok">Список участвовавших:</p>
+</div>
 <script>
-
 </script>
 </body>
 </html>
