--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ body, html{
 	top: 0.1px;
 	left: 0.1px;
 	height: 100px;
-	width: 1328px;
+	width: 1728px;
 	background-color: #FFFF00;
 }
 #minions{
@@ -39,12 +39,12 @@ body, html{
 #minion{
 	position: absolute;
 	bottom: 1px;
-	left: 42%;
+	left: 140px;
 }
 #miniontwo{
 	position: absolute;
 	bottom: 1px;
-	right: 42%;
+	right: 140px;
 }
 #tgk{
 	position: absolute;
@@ -150,9 +150,9 @@ body, html{
 }
 #rolictext{
 	position: absolute;
-	top: 1%;
-	right: 1%;
-	font-size: 100%;
+	top: 3px;
+	right: 3px;
+	font-size: 16px;
 }
 #textrolic{
 	position: absolute;
