--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 <meta charset = "uft-8"></meta>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <style> 
 body, html{
 	height: 100%;
