--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ body, html{
 	top: 0.1px;
 	left: 0.1px;
 	height: 100px;
-	width: 1728px;
+	width: 1328px;
 	background-color: #FFFF00;
 }
 #minions{
@@ -170,6 +170,17 @@ body, html{
 }
 #mentorimg{
 	height: 100%;
+}
+@media only screen and (max-width: 768px) {
+  {
+    font-size: 20px;
+  }
+}
+
+@media only screen and (max-width: 320px) {
+  {
+    font-size: 10px;
+  }
 }
 </style>
 </head>
