--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ body, html{
 #rolitext{
 	position: absolute;
 	left: 1px;
-	font-size: 100%;
+	font-size: 16px;
 }
 #textroli{
 	position: absolute;
@@ -166,20 +166,80 @@ body, html{
 	bottom: 5%;
 	margin-left: 20%;
 	margin-right: 20%;
-	font-size: 100%;
+	font-size: 16px;
 }
 #mentorimg{
 	height: 100%;
 }
-@media only screen and (max-width: 768px) {
-  {
-    font-size: 20px;
+@media only screen and (min-width: 600px) {
+  minions{
+    font-size: 70px;
+  }
+  information{
+	font-size: 25px;
+  }
+  tgk{
+	font-size: 16px;
+  }
+  vk{
+	font-size: 16px;
+  }
+  sait{
+	font-size: 16px;
+  }
+  golos{
+	font-size: 33px;
+  }
+  opros{
+	font-size: 20px;
+  }
+  spisok{
+	font-size: 20px;
+  }
+  rolitext{
+	font-size: 16px;
+  }
+  rolictext{
+	font-size: 16px;
+  }
+  vidos{
+	font-size: 16px;
   }
 }
 
-@media only screen and (max-width: 320px) {
-  {
-    font-size: 10px;
+@media only screen and (max-width: 600px) {
+  minions{
+    font-size: 60px;
+  }
+  information{
+	font-size: 20px;
+  }
+  tgk{
+	font-size: 12px;
+  }
+  vk{
+	font-size: 12px;
+  }
+  sait{
+	font-size: 12px;
+  }
+  golos{
+	font-size: 27px;
+  }
+  opros{
+	font-size: 16px;
+  }
+  spisok{
+	font-size: 16px;
+  }
+  rolitext{
+	font-size: 12px;
+  }
+  rolictext{
+	font-size: 12px;
+  }
+  vidos{
+	font-size: 12px;
   }
 }
 </style>
