--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@ body, html{
 }
 #minions{
 	position: absolute;
-	font-size: 70px;
+	font-size: 60px;
 	margin-top: 3px;
 	font-family: Verdana;
 }
 #information{
 	position: absolute;
-	font-size: 25px;
+	font-size: 20px;
 	bottom: 3px;
 	right: 3px;
 	font-style: italic;
@@ -51,25 +51,25 @@ body, html{
 	position: absolute;
 	top: 10px;
 	left: 10px;
-	font-size: 16px;
+	font-size: 12px;
 }
 #vk{
 	position: absolute;
 	top: 50px;
 	left: 10px;
-	font-size: 16px;
+	font-size: 12px;
 }
 #sait{
 	position: absolute;
 	top: 90px;
 	left: 10px;
-	font-size: 16px;
+	font-size: 12px;
 }
 #golos{
 	position: absolute;
 	top: 100px;
 	left: 3px;
-	font-size: 33px;
+	font-size: 27px;
 	font-weight: bold;
 }
 #three{
@@ -90,13 +90,13 @@ body, html{
 	position: absolute;
 	top: 10px;
 	left: 10px;
-	font-size: 20px;
+	font-size: 16px;
 }
 #spisok{
 	position: absolute;
 	top: 40px;
 	left: 10px;
-	font-size: 20px;
+	font-size: 16px;
 }
 #roli{
 	position: absolute;
@@ -128,7 +128,7 @@ body, html{
 #rolitext{
 	position: absolute;
 	left: 1px;
-	font-size: 16px;
+	font-size: 12px;
 }
 #textroli{
 	position: absolute;
@@ -153,7 +153,7 @@ body, html{
 	position: absolute;
 	top: 3px;
 	right: 3px;
-	font-size: 16px;
+	font-size: 12px;
 }
 #textrolic{
 	position: absolute;
@@ -166,81 +166,10 @@ body, html{
 	bottom: 5%;
 	margin-left: 20%;
 	margin-right: 20%;
-	font-size: 16px;
+	font-size: 12px;
 }
 #mentorimg{
 	height: 100%;
-}
-@media only screen and (min-width: 600px) {
-  minions{
-    font-size: 70px;
-  }
-  information{
-	font-size: 25px;
-  }
-  tgk{
-	font-size: 16px;
-  }
-  vk{
-	font-size: 16px;
-  }
-  sait{
-	font-size: 16px;
-  }
-  golos{
-	font-size: 33px;
-  }
-  opros{
-	font-size: 20px;
-  }
-  spisok{
-	font-size: 20px;
-  }
-  rolitext{
-	font-size: 16px;
-  }
-  rolictext{
-	font-size: 16px;
-  }
-  vidos{
-	font-size: 16px;
-  }
-}
-
-@media only screen and (max-width: 600px) {
-  minions{
-    font-size: 60px;
-  }
-  information{
-	font-size: 20px;
-  }
-  tgk{
-	font-size: 12px;
-  }
-  vk{
-	font-size: 12px;
-  }
-  sait{
-	font-size: 12px;
-  }
-  golos{
-	font-size: 27px;
-  }
-  opros{
-	font-size: 16px;
-  }
-  spisok{
-	font-size: 16px;
-  }
-  rolitext{
-	font-size: 12px;
-  }
-  rolictext{
-	font-size: 12px;
-  }
-  vidos{
-	font-size: 12px;
-  }
 }
 </style>
 </head>
@@ -312,6 +241,21 @@ body, html{
 	<p id = "spisok">Список участвовавших:</p>
 </div>
 <script>
+const mediaQuery = window.matchMedia('(min-width: 600px)');
+
+if (mediaQuery.matches) {
+	document.getElementById('minions').style.fontSize = "70px";
+	document.getElementById('information').style.fontSize = "25px";
+	document.getElementById('tgk').style.fontSize = "16px";
+	document.getElementById('vk').style.fontSize = "16px";
+	document.getElementById('sait').style.fontSize = "16px";
+	document.getElementById('golos').style.fontSize = "33px";
+	document.getElementById('opros').style.fontSize = "20px";
+	document.getElementById('spisok').style.fontSize = "20px";
+	document.getElementById('rolitext').style.fontSize = "16px";
+	document.getElementById('rolictext').style.fontSize = "16px";
+	document.getElementById('vidos').style.fontSize = "16px";
+}
 </script>
 </body>
 </html>
