--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ body, html{
 }
 #rolitext{
 	position: absolute;
-	top: 15px;
+	top: 10px;
 	left: 1px;
 	font-size: 14px;
 }
@@ -153,7 +153,7 @@ body, html{
 }
 #rolictext{
 	position: absolute;
-	font-size: 13px;
+	font-size: 14px;
 }
 #textrolic{
 	position: absolute;
@@ -166,7 +166,7 @@ body, html{
 	bottom: 5%;
 	margin-left: 20%;
 	margin-right: 20%;
-	font-size: 14.5px;
+	font-size: 14px;
 }
 </style>
 </head>
@@ -250,6 +250,7 @@ if (mediaQuery.matches) {
 	document.getElementById('opros').style.fontSize = "20px";
 	document.getElementById('spisok').style.fontSize = "20px";
 	document.getElementById('rolitext').style.fontSize = "15px";
+	document.getElementById('rolitext').style.top = "15px";
 	document.getElementById('rolictext').style.fontSize = "16px";
 	document.getElementById('vidos').style.fontSize = "16px";
 }
