--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ body, html{
 }
 #textrolic{
 	position: absolute;
-	top: 0px;
+	top: 5px;
 	right: 3px;
 	width: 30%;
 }
@@ -252,6 +252,7 @@ if (mediaQuery.matches) {
 	document.getElementById('rolitext').style.fontSize = "15px";
 	document.getElementById('rolitext').style.top = "15px";
 	document.getElementById('rolictext').style.fontSize = "16px";
+	document.getElementById('textrolic').style.top = "0px";
 	document.getElementById('vidos').style.fontSize = "16px";
 }
 </script>
