--- a/index.html
+++ b/index.html
@@ -168,9 +168,21 @@ body, html{
 	margin-right: 20%;
 	font-size: 14px;
 }
+#plakat{
+	position: absolute;
+	top: 554px;
+	left: 10px;
+}
+#fotozona{
+	position: absolute;
+	top: 554px;
+	left: 984px;
+}
 </style>
 </head>
 <body>
+<a href = "bigplakat.jpg" id = "plakat"><img href = "bigplakat.jpg" src = "smallplakat.jpg"></a>
+<a href = "bigfotozona.jpg" id = "fotozona"><img href = "bigfotozona.jpg" src = "smallfotozona.jpg"></a>
 <div id = "one">
 	<p id = "minions">МИНЬОНЫ!!!</p>
 	<p id = "information">Здесь вы можете узнать всю актуальную информацию о нашей партии!</p>
