--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ body, html{
 }
 #roli{
 	position: absolute;
-	top: 310px;
+	top: 670px;
 	width: 600px;
 	height: 900px;
 	background: rgba(0, 0, 0, 0.1); 
@@ -140,6 +140,7 @@ body, html{
 }
 #rolic{
 	position: absolute;
+	top: 360px;
 	width: 600px;
 	height: 290px;
 	background: rgba(0, 0, 0, 0.1); 
@@ -177,6 +178,34 @@ body, html{
 	top: 574px;
 	left: 994px;
 }
+#tysovki{
+	position: absolute;
+	width: 600px;
+	height: 340px;
+	background: rgba(0, 0, 0, 0.1); 
+}
+#tysvid{
+	position: absolute;
+	top: 20px;
+	height: 300px;
+	width: 170px;
+}
+#tysmin{
+	position: absolute;
+	bottom: 0px;
+	right: 0px;
+}
+#texttys{
+	position: absolute;
+	top: 40px;
+	bottom: 40px;
+	left: 200px;
+	width: 225px;
+}
+#tystext{
+	position: absolute;
+	font-size: 20px;
+}
 </style>
 </head>
 <body>
@@ -195,6 +224,19 @@ body, html{
 	<img src = "miniontwo.png" id = "miniontwo"></img>
 </div>
 <div id = "three">
+	<div id = "tysovki">
+		<video src = "tysovki.mp4" controls = "controls" poster = "poster.jpg" id = "tysvid"></video>
+		<img src = "three.png" id = "tysmin"></img>
+		<div id = "texttys">
+			<p id = "tystext">
+				НЕ ГадкаЯ партия представляет… <br>
+			<br>
+			Вот и подошла к концу неделя предвыборных кампаний… <br>
+			<br>
+			Сделай правильный выбор!
+		</p>
+		</div>
+	</div>
 	<div id = "rolic">
 		<img id = "video" src = "duel.jpg"></img>
 		<div id = "textrolic">
