--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@ body, html{
 </div>
 <div id = "three">
 	<div id = "tysovki">
-		<video type="video/mp4" src = "tysovki.mp4" controls = "controls" poster = "poster.jpg" id = "tysvid"></video>
+		<video src = "tysovki.MP4" controls = "controls" poster = "poster.jpg" id = "tysvid"></video>
 		<img src = "three.png" id = "tysmin"></img>
 		<div id = "texttys">
 			<p id = "tystext">
