--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@ body, html{
 }
 #tystext{
 	position: absolute;
-	font-size: 20px;
+	font-size: 18px;
 }
 </style>
 </head>
@@ -306,6 +306,7 @@ if (mediaQuery.matches) {
 	document.getElementById('rolictext').style.fontSize = "16px";
 	document.getElementById('textrolic').style.top = "0px";
 	document.getElementById('vidos').style.fontSize = "16px";
+	document.getElementById('tystext').style.fontSize = "20px";
 }
 </script>
 </body>
